# generic-agent

./: .env.example  .gitignore  README.md  entrypoint.py  main.py  pyproject.toml  run_mcp_server.py  start.py  start.sh
api/: __init__.py  app.py  models.py
config/: config.py  config.yml
config/prompts/: education.yaml  hospitality.yaml  hr.yaml  medical.yaml
docs/: API_DOCS.md  MULTI_USE_CASE_GUIDE.md  REACT_NATIVE_SETUP.md
mcp_server/: __init__.py  appointment_server.py  appointment_service.py  booking_server.py  booking_service.py  enrollment_server.py  enrollment_service.py  hr_server.py  hr_service.py  tools.py
modules/: agent.py  prompt_loader.py  prompts.py
react-native-integration/: README.md  VoiceAssistant.tsx  types.ts
utils/: logger.py  utils.py
